Final completed product

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProjectPortfolio</title>
+  <title>GKot Developer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Viga&display=swap" rel="stylesheet">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7klWyRPYZLDm-hRKZuodOSU0K2PhtS90"
+          type="text/javascript"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 <body>
   <app-root></app-root>
